[gd_scene load_steps=8 format=3 uid="uid://bsy5q0mcw1b7i"]

[ext_resource type="Script" path="res://SCRIPTS/GAME_MANAGER.gd" id="1_71s0l"]
[ext_resource type="Script" path="res://SCRIPTS/game.gd" id="1_suo8h"]
[ext_resource type="PackedScene" uid="uid://bqrljrj5s0yy6" path="res://SCENES/COW.tscn" id="2_rwtxa"]
[ext_resource type="FontFile" uid="uid://iakbob10ex5" path="res://ASSETS/fonts/PixelOperator8-Bold.ttf" id="4_f1ine"]
[ext_resource type="Script" path="res://SCENES/Endscore.gd" id="5_467qx"]
[ext_resource type="Script" path="res://SCENES/timerLabel.gd" id="6_k08n1"]

[sub_resource type="Curve2D" id="Curve2D_y6k7m"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -132.109, -165.42, 0, 0, 0, 0, 1398, -175, 0, 0, 0, 0, 1392, 795, 0, 0, 0, 0, -151, 811, 0, 0, 0, 0, -153, -175)
}
point_count = 5

[node name="Game" type="Node2D"]
script = ExtResource("1_suo8h")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_71s0l")

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="DROP_SpawnTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -3

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = -85.0
offset_top = -99.0
offset_right = 1260.0
offset_bottom = 737.0
color = Color(0.305882, 0.568627, 0.243137, 1)

[node name="Player" parent="." instance=ExtResource("2_rwtxa")]
position = Vector2(575, 324)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-575, -324)
curve = SubResource("Curve2D_y6k7m")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-132.109, -165.42)
rotation = -0.00626091

[node name="DROP_Path2D2" type="Path2D" parent="Player"]
position = Vector2(-598.476, -343.706)
scale = Vector2(1.03611, 1.05882)
curve = SubResource("Curve2D_y6k7m")

[node name="DROP_PathFollow2D" type="PathFollow2D" parent="Player/DROP_Path2D2"]
unique_name_in_owner = true
position = Vector2(-132.109, -165.42)
rotation = -0.00626091

[node name="Label" type="Label" parent="Player"]
offset_left = 121.0
offset_top = -286.0
offset_right = 524.0
offset_bottom = -219.0
theme_override_fonts/font = ExtResource("4_f1ine")
theme_override_font_sizes/font_size = 31
text = "TIME REMAINING 
%% SECONDS"
horizontal_alignment = 1
script = ExtResource("6_k08n1")

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 3
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
offset_left = -90.0
offset_top = -94.0
offset_right = 1259.0
offset_bottom = 734.0
color = Color(0.211765, 0.203922, 0.188235, 0.686275)

[node name="GameOver" type="Label" parent="GameOver/ColorRect"]
layout_mode = 0
offset_left = -95.0
offset_top = 175.0
offset_right = 1466.0
offset_bottom = 357.0
theme_override_fonts/font = ExtResource("4_f1ine")
theme_override_font_sizes/font_size = 101
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 0
offset_left = 128.0
offset_top = 485.0
offset_right = 613.0
offset_bottom = 647.0
theme_override_fonts/font = ExtResource("4_f1ine")
theme_override_font_sizes/font_size = 51
text = "YOU SCORED
%%%
POINTS"
script = ExtResource("5_467qx")

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/ColorRect"]
layout_mode = 0
offset_left = 942.0
offset_top = 553.0
offset_right = 1228.0
offset_bottom = 734.0
alignment = 1

[node name="RESTART" type="Button" parent="GameOver/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_f1ine")
theme_override_font_sizes/font_size = 36
text = "RESTART"

[node name="MENU" type="Button" parent="GameOver/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_f1ine")
theme_override_font_sizes/font_size = 36
text = "MENU"

[node name="QUIT" type="Button" parent="GameOver/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_f1ine")
theme_override_font_sizes/font_size = 36
text = "QUIT"

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 60.0
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="Player" method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="DROP_SpawnTimer" to="." method="_on_drop_spawn_timer_timeout"]
[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="pressed" from="GameOver/ColorRect/VBoxContainer/RESTART" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="GameOver/ColorRect/VBoxContainer/MENU" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="GameOver/ColorRect/VBoxContainer/QUIT" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
